--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,11 @@
 		"iterator": "cpp",
 		"string": "cpp",
 		"string_view": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"__locale": "cpp",
+		"__string": "cpp",
+		"ratio": "cpp",
+		"deque": "cpp",
+		"regex": "cpp"
 	}
 }
