switched operand.hpp to operand.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
 		"atomic": "cpp",
 		"bitset": "cpp",
 		"locale": "cpp",
-		"system_error": "cpp"
+		"system_error": "cpp",
+		"iostream": "cpp"
 	}
 }
